fixing contrast

--- a/style.css
+++ b/style.css
@@ -252,10 +252,12 @@ a:hover{
 }
 
 .after-wave {
-    background-image: linear-gradient(#017d7d80, #015151B3 15%, #383838B3);
+    background-image: linear-gradient(#017d7d80, #517C7C 20%, #3B5C5C, #424242 90%);
 }
 
 /* originally #67b7b780 or .5 opacity
+
+#017d7d80, #3B5C5C, #2B4545, #424242
 */
 table {
     margin-left: auto;
